# funasr-fastapi

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  download_model.py  pyproject.toml
src/: main.py
src/core/: audio.py  config.py  lifespan.py  logging_config.py
src/routes/: asr.py  deps.py  health.py
src/schemas/: asr.py
src/service/: asr_service.py
tests/core/: test_config.py
