[project]
name = "funasr-fastapi"
version = "0.1.0"
description = "FunASR FastAPI Server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.124.0",
    "funasr>=1.2.7",
    "loguru>=0.7.3",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.20",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "uvicorn>=0.38.0",
    "uvloop>=0.22.1",
]

[dependency-groups]
dev = ["modelscope>=1.32.0", "pytest>=9.0.1", "websockets>=15.0.1"]
